chore: atualizar layout web, galeria e assets

--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,11 @@
           <div class="logo">
             <img src="assets/logo-itachi.png" alt="ZARO BOT" />
           </div>
-          <h1 class="title delay-120" data-r>ZARO BOT</h1>
+          <h1 class="logotext-wrap delay-120" data-r><img class="logotext" src="assets/logotext2.png" alt="ZARO BOT" /></h1>
           <p class="sub delay-240" data-r>Bot Anime para WhatsApp</p>
           <div class="btn-group delay-360" data-r>
-            <button id="btnConnect" class="btn btn-primary" type="button">🔌 Conectar Bot</button>
-            <button id="wa" class="btn btn-secondary" type="button">💬 Chat no WhatsApp</button>
+            <button id="btnConnect" class="btn btn-primary" type="button">&#128268; Conectar Bot</button>
+            <button id="wa" class="btn btn-secondary" type="button">&#128172; Chat no WhatsApp</button>
           </div>
         </div>
       </div>
@@ -43,7 +43,7 @@
 
     <section class="sec">
       <div class="bg">
-        <img class="bg-image bg-opacity-16" src="assets/anime-characters-bg.jpg" alt="" />
+        <img class="bg-image bg-opacity-16" src="assets/CK.png" alt="" />
         <div class="dark"></div>
       </div>
       <div class="line"></div>
@@ -82,11 +82,11 @@
 
     <footer class="footer">
       <div class="fimg">
-        <img src="assets/logo-itachi.png" alt="ZARO BOT" />
+        <img src="assets/logotext2.png" alt="Logo do bot" />
       </div>
-      <h3 class="footer-title st">ZARO BOT</h3>
       <p class="footer-copy">O melhor bot anime para WhatsApp. Conteudo anime direto no seu chat.</p>
     </footer>
   </main>
 </body>
 </html>
+
