fix: remover exibição de número na tela de conexão

--- a/public/connect.html
+++ b/public/connect.html
@@ -129,7 +129,7 @@
             type="tel"
             id="phoneNumber"
             class="phone-input"
-            placeholder="+55 11 98765-4321"
+            placeholder="Digite seu número com DDI"
             maxlength="20"
           >
           <button class="btn-generate" id="btnGenerateCode">Gerar Código</button>
@@ -172,10 +172,6 @@
       <p class="section-description">Seu bot está online e pronto para uso</p>
 
       <div class="connected-info">
-        <div class="info-item">
-          <span class="info-label">Número:</span>
-          <span class="info-value" id="connectedNumber">+55 11 98765-4321</span>
-        </div>
         <div class="info-item">
           <span class="info-label">Nome:</span>
           <span class="info-value" id="connectedName">Usuário</span>
